Updated categories and max-selection limits

--- a/frameworks/g-cloud-9/questions/services/serviceCategoriesHosting.yml
+++ b/frameworks/g-cloud-9/questions/services/serviceCategoriesHosting.yml
@@ -1,39 +1,34 @@
+depends:
+- being: [cloud-hosting]
+  'on': lot
+hint: You can choose multiple categories.
 id: serviceCategories
 name: Service categories
-question: Which categories does your service fit under?
-hint: You can choose multiple categories.
-depends:
-  - "on": lot
-    being:
-      - cloud-hosting
-type: checkbox_tree
+number_of_items: 20
 options:
 - {label: 'Archiving, backup and disaster recovery'}
 - {label: Compute and application hosting}
 - {label: Container service}
 - {label: Content delivery network}
+- {label: Data warehousing}
+- {label: Database - noSQL}
+- {label: Database - relational}
+- {label: Database - other}
+- {label: Distributed denial of service attack (DDOS) protection}
+- {label: Firewall}
+- {label: Infrastructure and platform security}
+- {label: Intrusion detection}
 - {label: Load balancing}
 - {label: Logging and analysis}
 - {label: Message queuing and processing}
-- {label: Networking (including Network as a Service)}
-- {label: Platform as a Service (PaaS)}
+- {label: Networking (including network as a service)}
+- {label: Platform as a service (PaaS)}
+- {label: Protective monitoring}
 - {label: Search}
-- label: Database
-  options:
-  - {label: Data warehousing}
-  - {label: NoSQL}
-  - {label: Relational}
-- label: Security
-  options:
-  - {label: Distributed Denial of Service Attack (DDOS) protection}
-  - {label: Firewall}
-  - {label: Intrusion detection}
-  - {label: Protective monitoring}
-- label: Storage
-  options:
-  - {label: Disk (block) storage}
-  - {label: Object storage}
-number_of_items: 10
+- {label: Storage - disk (block)}
+- {label: Storage - object store}
+- {label: Storage - other}
+question: Which categories does your service fit under?
+type: checkbox_tree
 validations:
-  - name: max_items_limit
-    message: No more than 10 categories can be selected
+- {message: No more than 20 categories can be selected, name: max_items_limit}
