Nbsp dates for G9 and version bump

--- a/frameworks/g-cloud-9/messages/dates.yml
+++ b/frameworks/g-cloud-9/messages/dates.yml
@@ -1,9 +1,9 @@
-clarifications_close_date: '5pm BST, 28 March 2017'
+clarifications_close_date: '5pm&nbsp;BST,&nbsp;28&nbsp;March&nbsp;2017'
 
-clarifications_publish_date: '5pm BST, 4 April 2017'
+clarifications_publish_date: '5pm&nbsp;BST,&nbsp;4&nbsp;April&nbsp;2017'
 
-framework_close_date: '5pm BST, 11 April 2017'
+framework_close_date: '5pm&nbsp;BST,&nbsp;11&nbsp;April&nbsp;2017'
 
-intention_to_award_date: '18 May 2017'
+intention_to_award_date: '18&nbsp;May&nbsp;2017'
 
-framework_live_date: "22 May 2017"
+framework_live_date: "22&nbsp;May&nbsp;2017"
