--- a/frameworks/g-cloud-9/questions/declaration/payForWhatUse.yml
+++ b/frameworks/g-cloud-9/questions/declaration/payForWhatUse.yml
@@ -1,3 +1,4 @@
+name: Buyers pay for what they use
 question: |
   Please confirm that, unless they agree otherwise, buyers will: 
    - only pay for what they use
