markdown links to html links

--- a/frameworks/g-cloud-9/questions/declaration/organisationSize.yml
+++ b/frameworks/g-cloud-9/questions/declaration/organisationSize.yml
@@ -8,4 +8,4 @@ options:
   - label: large
 
 hint: >
-  Check the [size of your organisation](http://ec.europa.eu/growth/smes/business-friendly-environment/sme-definition/index_en.htm)
+  Check the <a href="http://ec.europa.eu/growth/smes/business-friendly-environment/sme-definition/index_en.htm" target="_blank">size of your organisation</a>
