--- a/frameworks/g-cloud-9/questions/declaration/termsOfParticipation.yml
+++ b/frameworks/g-cloud-9/questions/declaration/termsOfParticipation.yml
@@ -1,4 +1,4 @@
 name: Invitation to apply
 question: >
-  Do you agree to comply with the terms of the [G-Cloud&nbsp;9 ‘invitation to apply’](/suppliers/frameworks/g-cloud-9)?
+  Do you agree to comply with the terms of the <a href="/suppliers/frameworks/g-cloud-9" target="_blank">G-Cloud&nbsp;9 ‘invitation to apply’</a>?
 type: boolean
