--- a/frameworks/g-cloud-9/manifests/declaration.yml
+++ b/frameworks/g-cloud-9/manifests/declaration.yml
@@ -51,8 +51,8 @@
     In questions [[conspiracy]] to [[organisedCrime]], ‘anyone who represents, supervises or has control in your 
     organisation or a partner or parent organisation’ includes members of your group of economic operators, their
     proposed subcontractors, and any directors, partners, or any other person who has powers of representation, 
-    decision or control. Check that your organisation complies with [Regulation 57(1) of the Public Contracts
-    Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/57/made).
+    decision or control. Check that your organisation complies with <a href="http://www.legislation.gov.uk/uksi/2015/102/regulation/57/made" target="_blank">Regulation 57(1) of the Public Contracts
+    Regulations 2015</a>.
   questions:
     - conspiracy
     - corruptionBribery
@@ -79,12 +79,12 @@
     CCS can also exclude you if you are guilty of serious
     misrepresentation in providing any information referred to within
     regulations
-    [23](http://www.legislation.gov.uk/uksi/2015/102/regulation/23/made),
-    [24](http://www.legislation.gov.uk/uksi/2015/102/regulation/24/made),
-    [25](http://www.legislation.gov.uk/uksi/2015/102/regulation/25/made),
-    [26](http://www.legislation.gov.uk/uksi/2015/102/regulation/26/made) or
-    [27](http://www.legislation.gov.uk/uksi/2015/102/regulation/27/made)
-    of the [Public Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/contents/made)
+    <a href="http://www.legislation.gov.uk/uksi/2015/102/regulation/23/made" target="_blank">23</a>,
+    <a href="http://www.legislation.gov.uk/uksi/2015/102/regulation/24/made" target="_blank">24</a>,
+    <a href="http://www.legislation.gov.uk/uksi/2015/102/regulation/25/made" target="_blank">25</a>,
+    <a href="http://www.legislation.gov.uk/uksi/2015/102/regulation/26/made" target="_blank">26</a> or
+    <a href="http://www.legislation.gov.uk/uksi/2015/102/regulation/27/made" target="_blank">27</a>
+    of the <a href="http://www.legislation.gov.uk/uksi/2015/102/contents/made" target="_blank">Public Contracts Regulations 2015</a>
     or if you fail to provide any such information it requests.
   questions:
     - taxEvasion
@@ -210,7 +210,7 @@
   editable: True
   prefill: True
   description: |
-    The government [aims to spend £1 in every £3 with small-to-medium enterprises (SMEs)s](https://www.gov.uk/government/news/big-opportunities-for-small-firms-government-set-to-spend-1-in-every-3-with-small-businesses) by 2020.
+    The government <a href="https://www.gov.uk/government/news/big-opportunities-for-small-firms-government-set-to-spend-1-in-every-3-with-small-businesses" target="_blank">aims to spend £1 in every £3 with small-to-medium enterprises (SMEs)s</a> by 2020.
     
     The Crown Commercial Service will use the information you provide about the size of your company to report overall statistics about the successful suppliers on G-Cloud&nbsp;9.  
   questions:
