--- a/frameworks/g-cloud-9/questions/declaration/appropriateTradeRegisters.yml
+++ b/frameworks/g-cloud-9/questions/declaration/appropriateTradeRegisters.yml
@@ -2,7 +2,7 @@ name: Registration with appropriate trade registers
 question: If your business was not established in the UK, is it registered with the appropriate professional or trade register(s) in the EU member state where it’s established?
 type: boolean
 hint: >
-  Check that your organisation complies with [Schedule 5, Regulation 58(5)](http://www.legislation.gov.uk/uksi/2015/102/regulation/58/made) of the Public Contracts Regulations 2015.
+  Check that your organisation complies with <a href="http://www.legislation.gov.uk/uksi/2015/102/regulation/58/made" target="_blank">Schedule 5, Regulation 58(5)</a> of the Public Contracts Regulations 2015.
 validations:
   - 
     name: answer_required
