--- a/frameworks/g-cloud-9/questions/declaration/conflictOfInterest.yml
+++ b/frameworks/g-cloud-9/questions/declaration/conflictOfInterest.yml
@@ -2,5 +2,5 @@ name: Conflict of interest
 question: >
   Please confirm whether, within the past 3 years, your organisation or any of your partner organisations has:
 
-    - had a conflict of interest within the meaning of [Regulation 24 of the Public Contracts Regulations 2015](http://www.legislation.gov.uk/uksi/2015/102/regulation/24/made)
+    - had a conflict of interest within the meaning of <a href="http://www.legislation.gov.uk/uksi/2015/102/regulation/24/made" target="_blank">Regulation 24 of the Public Contracts Regulations 2015</a>
 type: boolean
