--- a/frameworks/g-cloud-9/questions/declaration/dunsNumber.yml
+++ b/frameworks/g-cloud-9/questions/declaration/dunsNumber.yml
@@ -3,7 +3,7 @@ question: What is your organisation’s DUNS number?
 type: text
 hint: >
   The trading organisation applying to sell services through G-Cloud&nbsp;9 must have its own 9-digit DUNS number.
-  [Find out how to get a DUNS number.](http://www.dnb.co.uk/dandb-duns-number)
+  <a href="http://www.dnb.co.uk/dandb-duns-number" target="_blank">Find out how to get a DUNS number.</a>
 
 validations:
   -
