--- a/frameworks/g-cloud-9/questions/declaration/readUnderstoodGuidance.yml
+++ b/frameworks/g-cloud-9/questions/declaration/readUnderstoodGuidance.yml
@@ -2,5 +2,5 @@ name: Understanding the application process
 question: >
   Do you understand the application process for G-Cloud&nbsp;9 on the Digital Marketplace?
 hint: >
-  You can read about how to apply in the [G-Cloud suppliers’ guide](https://www.gov.uk/guidance/g-cloud-suppliers-guide#how-to-apply).
+  You can read about how to apply in the <a href="https://www.gov.uk/guidance/g-cloud-suppliers-guide#how-to-apply" target="_blank">G-Cloud suppliers’ guide</a>.
 type: boolean
