--- a/frameworks/g-cloud-9/questions/declaration/technologyCodesOfPractice.yml
+++ b/frameworks/g-cloud-9/questions/declaration/technologyCodesOfPractice.yml
@@ -1,4 +1,4 @@
 name: Technology code of practice
 question: >
-  Will you comply with the government’s latest [technology code of practice](https://www.gov.uk/service-manual/technology/code-of-practice.html)?
+  Will you comply with the government’s latest <a href="https://www.gov.uk/service-manual/technology/code-of-practice.html" target="_blank">technology code of practice</a>?
 type: boolean
