--- a/frameworks/g-cloud-9/questions/services/dataExportFormats.yml
+++ b/frameworks/g-cloud-9/questions/services/dataExportFormats.yml
@@ -1,7 +1,7 @@
 name: Data export formats
 question: What open formats can users export their data in?
 question_advice: >
-  Read about the [open standards requirements for government documents](https://www.gov.uk/government/publications/open-standards-for-government/viewing-government-documents).
+  Read about the <a href="https://www.gov.uk/government/publications/open-standards-for-government/viewing-government-documents" target="_blank">open standards requirements for government documents</a>.
 
 depends:
   - "on": lot
