* correct indentation on content for some declaration questions * Split establishedInTheUK multiquestion back out to separate questions (multiquestion/question-with-dependencies not supported by declaration) * Add names to establishedInTheUK child questions; content will need to change.

--- a/frameworks/g-cloud-9/questions/declaration/appropriateTradeRegisters.yml
+++ b/frameworks/g-cloud-9/questions/declaration/appropriateTradeRegisters.yml
@@ -1,3 +1,4 @@
+name: Registration with appropriate trade registers
 question: If your business was not established in the UK, is it registered with the appropriate professional or trade register(s) in the EU member state where it’s established?
 type: boolean
 hint: >
@@ -7,5 +8,3 @@ validations:
     name: answer_required
     message: >
       You need to answer this question because you answered ‘no’ to [[establishedInTheUK]].
-      
-hidden: true
