--- a/frameworks/g-cloud-9/questions/declaration/licenceOrMemberRequiredDetails.yml
+++ b/frameworks/g-cloud-9/questions/declaration/licenceOrMemberRequiredDetails.yml
@@ -1,3 +1,4 @@
+name: Details of state requirements
 question: >
   If you answered ‘licensed’ or ‘a member of a relevant organisation’ in [[licenceOrMemberRequired]], 
   please give details of the state’s requirements and confirm whether you’ve met them.
@@ -6,5 +7,3 @@ validations:
   - 
     name: answer_required
     message: You need to answer this question because you answered ‘licensed’ or ‘a member of a relevant organisation’ in [[licenceOrMemberRequired]].
-
-hidden: true
