--- a/frameworks/g-cloud-9/manifests/declaration.yml
+++ b/frameworks/g-cloud-9/manifests/declaration.yml
@@ -180,15 +180,19 @@
     - dunsNumber
     - registeredVATNumber
 -
-  name: Where your business was established
-  slug: where-your-business-was-established
+  name: Established outside the UK
+  slug: established-outside-the-uk
   editable: True
   prefill: True
   description: |
     The Crown Commercial Service will use the information you provide on this page to process your G-Cloud&nbsp;9 application.
     If your application is successful, it will carry out checks on your company.
   questions:
-    - multiqEstablishedInTheUK
+    - establishedInTheUK
+    - appropriateTradeRegisters
+    - appropriateTradeRegistersNumber
+    - licenceOrMemberRequired
+    - licenceOrMemberRequiredDetails
 -
 
   name: How you’ll deliver your services
