--- a/frameworks/g-cloud-9/questions/declaration/licenceOrMemberRequired.yml
+++ b/frameworks/g-cloud-9/questions/declaration/licenceOrMemberRequired.yml
@@ -1,3 +1,4 @@
+name: Licence or organisation membership requirement
 question: >
   Please confirm if, to provide the services specified in this procurement, it’s a legal requirement in the state where you’re established to be:
 type: radios
@@ -9,6 +10,3 @@ validations:
   - 
     name: answer_required
     message: You need to answer this question because you answered ‘no’ to [[establishedInTheUK]].
-    
-hidden: true
-
