--- a/frameworks/g-cloud-9/questions/services/serviceCategoriesSoftware.yml
+++ b/frameworks/g-cloud-9/questions/services/serviceCategoriesSoftware.yml
@@ -324,5 +324,5 @@ options:
 question: Which categories does your service fit under?
 type: checkbox_tree
 validations:
-- {message: 'No more than 20 categories can be selected, including top-level categories',
+- {message: 'No more than 20 categories can be selected.',
   name: max_items_limit}
