Software accessibility question had wrong dependency set-up
 - now the 'testing' question will only appear if the service does not
   meet an accessibility standard, as intended.

--- a/frameworks/g-cloud-9/questions/services/serviceInterfaceAccessibility.yml
+++ b/frameworks/g-cloud-9/questions/services/serviceInterfaceAccessibility.yml
@@ -7,7 +7,7 @@ depends:
       - cloud-software
 followup:
   serviceInterfaceAccessibilityDescription:
-    - true
+    - none
 
 type: radios
 options:
