fix test, add word

--- a/frameworks/g-cloud-9/manifests/edit_submission.yml
+++ b/frameworks/g-cloud-9/manifests/edit_submission.yml
@@ -196,7 +196,7 @@
   edit_questions: true
   questions:
     - staffSecurityClearanceChecks
-    - multiqSecurityStaff
+    - governmentSecurityClearances
 
 - name: Secure development
   editable: false
