--- a/frameworks/g-cloud-9/questions/services/governmentSecurityClearances.yml
+++ b/frameworks/g-cloud-9/questions/services/governmentSecurityClearances.yml
@@ -1,4 +1,4 @@
-name: Security clearances
+name: Government security clearances
 question: >
   If the role requires it, what level of security clearance are you prepared to make sure your staff have?
 question_advice: Read the <a href="https://www.gov.uk/guidance/security-vetting-and-clearance" target="_blank" rel="noopener noreferrer">government guidance on security vetting and clearance (new tab)</a>.
@@ -8,7 +8,7 @@ depends:
     being:
       - cloud-support
 
-type: radio
+type: radios
 options:
   - label: Up to Developed Vetting (DV)
     value: dv
