remove unused file, add followup for accreditation

--- a/frameworks/g-cloud-9/questions/services/accreditationsOther.yml
+++ b/frameworks/g-cloud-9/questions/services/accreditationsOther.yml
@@ -1,12 +1,14 @@
 name: Other security accreditations
 question: Do you have any other security accreditations that cover this service?
 
-optional: true
 depends:
   - "on": lot
     being:
       - cloud-hosting
       - cloud-software
+followup:
+  accreditationsOther:
+    - true
 
 type: boolean
 
