add security questions to all lots

--- a/frameworks/g-cloud-9/questions/services/governmentSecurityClearances.yml
+++ b/frameworks/g-cloud-9/questions/services/governmentSecurityClearances.yml
@@ -6,6 +6,8 @@ question_advice: Read the <a href="https://www.gov.uk/guidance/security-vetting-
 depends:
   - "on": lot
     being:
+      - cloud-hosting
+      - cloud-software
       - cloud-support
 
 type: radios
