tweak declaration nscs exclusions question

--- a/frameworks/g-cloud-9/questions/declaration/servicesDoNotInclude.yml
+++ b/frameworks/g-cloud-9/questions/declaration/servicesDoNotInclude.yml
@@ -9,7 +9,7 @@ question: >
     - bespoke design or development
     - any cyber security services that have been assured under these National Cyber Security Centre (NCSC) schemes:
       - Cyber Security Consultancy
-      - CHECK
+      - Penetration Testing (CHECK)
       - Cyber Incident Response (CIR)
       - Tailored Assurance Service
 
