accreditationsOther -> accreditationsOtherList followup key

--- a/frameworks/g-cloud-9/questions/services/accreditationsOther.yml
+++ b/frameworks/g-cloud-9/questions/services/accreditationsOther.yml
@@ -7,7 +7,7 @@ depends:
       - cloud-hosting
       - cloud-software
 followup:
-  accreditationsOther:
+  accreditationsOtherList:
     - true
 
 type: boolean
