--- a/frameworks/g-cloud-9/questions/declaration/payForWhatUse.yml
+++ b/frameworks/g-cloud-9/questions/declaration/payForWhatUse.yml
@@ -1,7 +1,8 @@
 name: Buyers pay for what they use
-question: |
-  Please confirm that, unless they agree otherwise, buyers will: 
-   - only pay for what they use
-   - not pay for services in advance
+question: >
+  Please confirm that, unless they agree otherwise, buyers will:
+
+    - only pay for what they use
+    - not pay for services in advance
 
 type: boolean
